Fix overflow in grid

--- a/static/css/component.css
+++ b/static/css/component.css
@@ -47,7 +47,7 @@
 	margin-top: 10px;
 	text-align: left;
 	height: 0;
-	overflow: hidden;
+	overflow: scroll;
 }
 
 .og-expander-inner {
